# rainfall

./: Cargo.toml  README.md
src/: main.rs  slackapi.rs  yahooapi.rs
tests/: yahooapi_test.rs
