[package]
name = "rainfall"
version = "0.1.0"
authors = ["Katsusuke Shimizu <katsusuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.9.0", features = ["attributes"]}
serde_json = "1.0.61"
surf = "2.1.0"
